--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,19 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.44.2",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.2",
     "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "node-sass": "^7.0.3",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-graph-vis": "^1.0.7",
@@ -29,6 +37,7 @@
     "react-use-websocket": "^4.5.0",
     "react-vis-network-graph": "^3.0.1",
     "redux": "^4.2.1",
+    "sass": "^1.74.1",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
     "vis-data": "^7.1.7",
