--- a/frontend/src/.eslintrc.json
+++ b/frontend/src/.eslintrc.json
@@ -34,6 +34,7 @@
          }
       ],
       "react/prop-types": 0,
-      "no-extra-semi": "off"
+      "no-extra-semi": "off",
+      "react/jsx-key": "off"
    }
 }
