--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
+    "react-swipeable-views": "^0.14.0",
     "react-use-websocket": "^4.5.0",
     "react-vis-network-graph": "^3.0.1",
     "redux": "^4.2.1",
