--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "3.44.2",
     "axios": "^1.4.0",
-    "chart.js": "^4.4.2",
+    "chart.js": "^3.9.1",
     "dayjs": "^1.11.10",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -23,7 +23,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "node-sass": "^7.0.3",
     "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
@@ -33,11 +32,12 @@
     "react-graph-vis": "^1.0.7",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^3.0.1",
     "react-swipeable-views": "^0.14.0",
     "react-use-websocket": "^4.5.0",
     "react-vis-network-graph": "^3.0.1",
     "redux": "^4.2.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.74.1",
     "socket.io-client": "^4.7.2",
     "uuid": "^9.0.1",
@@ -46,7 +46,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "PORT=3030 react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
