--- a/frontend/src/.eslintrc.json
+++ b/frontend/src/.eslintrc.json
@@ -15,6 +15,7 @@
    },
    "plugins": ["react", "prettier"],
    "rules": {
+      "react/react-in-jsx-scope": "off",
       "prettier/prettier": 0,
       "no-unused-vars": [
          0,
@@ -35,6 +36,10 @@
       ],
       "react/prop-types": 0,
       "no-extra-semi": "off",
-      "react/jsx-key": "off"
+      "react/jsx-key": "off",
+      "react/react-in-jsx-scope": "off",
+      // allow jsx syntax in js files (for next.js project)
+     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
+  
    }
 }
