--- a/frontend/src/.eslintrc.json
+++ b/frontend/src/.eslintrc.json
@@ -36,10 +36,6 @@
       ],
       "react/prop-types": 0,
       "no-extra-semi": "off",
-      "react/jsx-key": "off",
-      "react/react-in-jsx-scope": "off",
-      // allow jsx syntax in js files (for next.js project)
-     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }], //should add ".ts" if typescript project
-  
+      "react/jsx-key": "off"
    }
 }
